--- a/_config.yml
+++ b/_config.yml
@@ -282,19 +282,23 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       read_time: true
       comments: # true
-      share: true
+      share: false
       related: true
+      sidebar:
+        nav: "sidebar"
   # _pages
   - scope:
       path: ""
       type: pages
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       read_time: true
       comments: # true
-      share: true
+      share: false
       related: true
+      sidebar:
+        nav: "sidebar"
