우분투 24.04 타일 서버 설치법 추가

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,6 +24,8 @@ sidebar:
     url: /usage/
 
     children:
+      - title: "OSM 지도 타일 서버 호스팅하기(우분투 24.04)"
+        url: /hosting-map-tile-ubuntu2404/
       - title: "OSM 지도 타일 서버 호스팅하기(우분투 22.04)"
         url: /hosting-map-tile-ubuntu2204/
       - title: "OSM 지도 타일 서버 호스팅하기(도커를 이용한 방법)"
